--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@ footer {
 
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-</head><body>
+<title>SIMPLE TASKS</title>
+</head>
+  <body>
   <div class="animated-background">
     <div class="wave"></div>
     <div class="wave"></div>
