--- a/contact.html
+++ b/contact.html
@@ -750,6 +750,7 @@ footer {
 }
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<title>SIMPLE TASKS - CONTACT US</title>
 </head><body>
   <div class="animated-background">
     <div class="wave"></div>
