--- a/press.html
+++ b/press.html
@@ -562,6 +562,7 @@ footer {
 }
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<title>SIMPLE TASKS - PRESS </title>
 </head><body>
   <div class="animated-background">
     <div class="wave"></div>
