--- a/privacy.html
+++ b/privacy.html
@@ -792,6 +792,7 @@ footer {
 }
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<title>SIMPLE TASKS - PRIVACY</title>
 </head><body>
   <div class="animated-background">
     <div class="wave"></div>
