--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ footer {
     <P>⠀</P>
     <p>Participate in meaningful surveys and help shape the future. Your opinion matters!</p>
     <P>⠀</P>
-    <a href="https://example.com/surveys/start" class="btn">Start Survey</a>
+    <a href="https://loot-link.com/s?bb110cb2" class="btn">Start Survey</a>
   </div>
 
   <div class="container">
