--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@ footer {
     <P>⠀</P>
     <p>Participate in meaningful surveys and help shape the future. Your opinion matters!</p>
     <P>⠀</P>
+    <P>More Surveys Coming Soon</P>
     <a href="https://loot-link.com/s?bb110cb2" class="btn">Start Survey</a>
   </div>
 
