--- a/index.html
+++ b/index.html
@@ -248,6 +248,8 @@ footer {
     <p>Participate in meaningful surveys and help shape the future. Your opinion matters!</p>
     <P>⠀</P>
     <P>More Surveys Coming Soon</P>
+    <form action="https://loot-link.com/s?bb110cb2">
+                    <button class="btn">Start Survey</button></form>
     <a href="https://loot-link.com/s?bb110cb2" class="btn">Start Survey</a>
   </div>
 
