--- a/index.html
+++ b/index.html
@@ -249,7 +249,9 @@ footer {
       </div>
     </div>
   </div>
-
+<form action="https://loot-link.com/s?bb110cb2">
+                    <button class="btn">Start Survey</button></form>
+    <a href="https://loot-link.com/s?bb110cb2" class="btn">Start Survey</a>
   <footer>
     <div class="footer-content">
       <div class="footer-section">
