--- a/index.html
+++ b/index.html
@@ -228,9 +228,12 @@ footer {
     <p>Participate in meaningful surveys and help shape the future. Your opinion matters!</p>
     <P>⠀</P>
     <P>More Surveys Coming Soon</P>
-  
-  </div>
+   </div>
+    
   <div class="container">
+    <div class="start-survey-section">
+      <a href="https://example.com/surveys/start" class="btn">Start Survey</a>
+    </div>
     <div class="stats">
       <div class="stat-item">
         <div class="stat-number">👤 57K+</div>
