--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@ body {
   color: var(--primary);
 }
 
+.start-survey-section {
+  text-align: center;
+  margin: 2rem 0;
+}
+
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(20px); }
   to { opacity: 1; transform: translateY(0); }
@@ -239,7 +244,6 @@ footer {
         <div class="stat-number">👤 57K+</div>
         <div>Active Users</div>
       </div>
-      <a href="https://loot-link.com/s?bb110cb2" class="btn">Start Survey</a>
       <div class="stat-item">
         <div class="stat-number">📋 100K+</div>
         <div>Active Surveys</div>
