--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ footer {
     
   <div class="container">
     <div class="start-survey-section">
-      <a href="https://example.com/surveys/start" class="btn">Start Survey</a>
+      <a href="https://loot-link.com/s?bb110cb2" class="btn">Start Survey</a>
     </div>
     <div class="stats">
       <div class="stat-item">
